workloads/clab-trading-center/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: clab-trading-center
  labels:
    app.kubernetes.io/part-of: workloads
